--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Avenir, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 0.5px;
 }
 
@@ -65,8 +65,6 @@
     display: none !important;
 }
 
-/* CUSTOM FEED */
-
 .chat-feed {
     height: 100%;
     width: 100%;
@@ -128,7 +126,6 @@
     object-fit: cover;
     border-radius: 6px;
     height: 30vw;
-    /* width: 30vw; */
     max-height: 200px;
     max-width: 200px;
     min-height: 100px;
@@ -213,31 +210,23 @@
 .wrapper {
     height: 100vh;
     width: 100%;
-    background: rgb(117, 84, 160);
-    background: linear-gradient(90deg, rgba(117, 84, 160, 1) 7%, rgba(117, 84, 160, 1) 17%, rgba(106, 95, 168, 1) 29%, rgba(99, 103, 174, 1) 44%, rgba(87, 116, 184, 1) 66%, rgba(70, 135, 198, 1) 83%, rgba(44, 163, 219, 1) 96%, rgba(22, 188, 237, 1) 100%, rgba(0, 212, 255, 1) 100%);
+    background: #1A1A1D;;
     display: flex;
     justify-content: center;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .input {
-    color: #333;
-    font-size: 1.2rem;
-    margin: 0 auto;
-    padding: 1.5rem 2rem;
-    border-radius: 0.2rem;
-    background-color: rgb(255, 255, 255);
-    border: none;
-    width: 90%;
-    display: block;
-    border-bottom: 0.3rem solid transparent;
-    transition: all 0.3s;
-    outline: none;
-    margin-bottom: 25px;
+    border-radius: 15px;
+    padding: 15px 20px;
+    width: 100%;
+    margin-top: 0.1em;
+    margin-bottom: 2em;
 }
 
 .form {
-    width: 400px;
+    width: 300px;
 }
 
 .title {
@@ -246,23 +235,18 @@
     margin-bottom: 30px;
     width: 100%;
     font-size: 2.3em;
-    ;
 }
 
 .button {
-    border-radius: 4px;
-    border: none;
-    background-color: white;
-    color: black;
-    text-align: center;
+    color: #fff;
     text-transform: uppercase;
-    font-size: 22px;
-    padding: 20px;
-    width: 200px;
-    transition: all 0.4s;
-    cursor: pointer;
-    margin: 5px;
-    width: 90%;
+    text-decoration: none;
+    background: rgb(2, 153, 2);
+    padding: 18px;
+    border-radius: 15px;
+    display: inline-block;
+    border: none;
+    width: 100%;
 }
 
 .button span {
